# pypi_analysis

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: new_projects_20240627.md  new_projects_20240727.md  project_installs_report.md
notebooks/: 0_EDA.ipynb  1_MoM.ipynb  2_New.ipynb  project_installs_report.md
pypi_downloads/: NewPackagesProcessor.py  file_loader.py  new_packages.py
references/: query.sql
